--- a/style.css
+++ b/style.css
@@ -443,3 +443,197 @@ font-size: 40px;
     color: white;
     text-align: center;
 }
+
+@media(max-width:1400px) {
+    .about-text p {
+        color: white;
+        margin-top: 114px;
+        text-align: left;
+        margin-left: 40px;
+    }
+    .about-text p {
+      
+        margin-top: 62px;
+       
+    }
+}
+@media(max-width:1300px) {
+    .container {
+        width: 100%;
+        margin: auto;
+        padding-left: 20px;
+        padding-right: 20px;
+        box-sizing: border-box;
+        max-width: 100%;
+    }
+    .about-image img {
+      
+        margin-left: 224px;
+      
+    }
+    .about-image {
+        width: 50%;
+    }
+    .about-text {
+        width: 50%;
+    }
+    
+}
+@media(max-width:1200px) {
+    .about-image img {
+        width: 320px;
+        margin-left: 195px;
+        margin-top: 68px;
+    }
+    
+    
+}
+@media(max-width:1100px){
+    .about-image img {
+        width: 320px;
+        margin-left: 135px;
+        margin-top: 68px;
+    }
+    .banner {
+        
+        padding: 192px 0;
+        
+    }
+   
+
+}
+@media(max-width:1000px){
+    .banner {
+        
+        padding: 227px 0;
+       
+    }
+    .banner-text a {
+     
+        font-size: 22px;
+        
+        margin-top: 76px;
+       
+    }
+    .about-text {
+        width: 100%;
+    }
+    .about-text p {
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .about-image {
+        width: 100%;
+    }
+   
+}
+@media(max-width:9000px){
+   
+}
+
+@media(max-width:800px) {
+    .banner {
+        
+        padding: 194px 0;
+       
+    }
+    .banner-text a {
+     
+        margin-top: 34px;
+        padding: 10px 33px;
+       
+    }
+    .banner-text h1 {
+        font-size: 41px;
+    }
+    .banner-text p {
+        font-weight: bold;
+        font-size: 27px;
+        margin-top: 35px;
+    }
+   
+}
+@media(max-width:700px) {
+    .header-manu ul li {
+        display: inline-block;
+        padding: 22px 13px;
+    }
+    .banner-text a {
+       
+        font-size: 20px;
+        
+    }
+
+}
+@media(max-width:600px) {
+    .header-logo {
+        width: 100%;
+        text-align: center;
+    }
+    .header-manu {
+        width: 100%;
+    }
+    .header-manu ul {
+        text-align: center;
+        margin-bottom: 0;
+    }
+    .header-manu ul li {
+        display: inline-block;
+        padding: 7px 13px;
+    }
+    .header-logo img {
+        width: 87px;
+    }
+    .banner {
+        padding: 162px 0;
+    }
+    .about-image img {
+        
+        margin-left: 45px;
+        margin-top: 30px;
+       
+    }
+
+}
+@media(max-width:500px) {
+    .banner-text p {
+        
+        font-size: 25px;
+        
+    }
+    .banner-text h1 {
+        font-size: 35px;
+    }
+    .banner {
+        padding: 144px 0;
+    }
+    .about-image img {
+        margin-left: 27px;
+        
+    }
+}
+@media(max-width:400px) {
+    .header-manu ul li a {
+       
+        font-size: 18px;
+        
+    }
+    .banner-text h1 {
+        font-size: 29px;
+    }
+    .banner-text p {
+        font-size: 19px;
+    }
+    .banner-text a {
+        margin-top: 34px;
+        padding: 10px 21px;
+    }
+    .banner-text a {
+        font-size: 14px;
+    }
+    .about-image img {
+        margin-left: 0px;
+        margin: auto;
+    }
+
+}
